# CodeIO

./: .gitignore  CLAUDE.md  FEATURES.md  ROADMAP.md  VISION.md  features.toml
.claude/hooks/: session-start.sh
ai/: pyproject.toml
ai/codeio/: __init__.py
ai/codeio/context/: __init__.py  window_manager.py
ai/codeio/llm/: __init__.py  client.py  tool_dispatcher.py
ai/codeio/services/: __init__.py  client_pool.py  spotlight.py
config/: codeio.toml
docs/: architecture-model.md  language-services.md  language-spec.md  mesh-design.md  workbench-vision.md
examples/: hello.cio  tables.cio
proto/ai/: ai_service.proto  context_window.proto  spotlight.proto  types.proto
proto/core/: common.proto  error.proto
proto/frontend/: ast.proto  parse.proto  typecheck.proto
proto/index/: context_index.proto  dependency_map.proto  workspace_scan.proto
proto/ir/: ir.proto
proto/lang/: adapter.proto
proto/meta/: dsl.proto  macro.proto
proto/p2p/: blockstream.proto  mesh.proto
proto/vm/: execution.proto  vm_control.proto
services/: Cargo.toml
services/crates/codeio-cli/: Cargo.toml
services/crates/codeio-cli/src/: main.rs  serve.rs
services/crates/codeio-common/: Cargo.toml  build.rs
services/crates/codeio-common/src/: lib.rs
services/crates/codeio-context/: Cargo.toml
services/crates/codeio-context/src/: assembler.rs  lib.rs  main.rs  ranker.rs  server.rs
services/crates/codeio-depmap/: Cargo.toml
services/crates/codeio-depmap/src/: main.rs  resolver.rs  server.rs
services/crates/codeio-index/: Cargo.toml
services/crates/codeio-index/src/: lib.rs  main.rs  scanner.rs  server.rs  store.rs  symbol_index.rs
services/crates/codeio-ir/: Cargo.toml
services/crates/codeio-ir/src/: eval.rs  lib.rs
services/crates/codeio-lang/: Cargo.toml
services/crates/codeio-lang/src/: interp.rs  lexer.rs  lib.rs  parser.rs
services/crates/codeio-router/: Cargo.toml
services/crates/codeio-router/src/: index.rs  lib.rs  router.rs  selector.rs
services/crates/codeio-spotlight/: Cargo.toml
services/crates/codeio-spotlight/src/: lib.rs  main.rs  server.rs  trigram.rs
services/crates/codeio-values/: Cargo.toml
services/crates/codeio-values/src/: lib.rs
services/crates/codeio-view/: Cargo.toml
services/crates/codeio-view/src/: lib.rs
tools/protogen/: generate.sh
tools/scripts/: gen_docs.py  health-check.sh
tools/termux/: CodeIO.shortcut  README.md  setup.sh
