[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "codeio-ai"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "grpcio>=1.65",
  "grpcio-tools>=1.65",
  "protobuf>=5.27",
  "anthropic>=0.30",
  "openai>=1.40",
  "tiktoken>=0.7",
  "pydantic>=2.7",
  "anyio>=4.4",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
  "pytest-asyncio>=0.23",
  "mypy>=1.10",
  "ruff>=0.5",
]

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.mypy]
strict = true
