[workspace]
members = [
    "crates/codeio-cli",
  "crates/codeio-common",
  "crates/codeio-index",
  "crates/codeio-spotlight",
  "crates/codeio-context",
  "crates/codeio-depmap",
]
resolver = "2"

[workspace.dependencies]
tokio-stream = "0.1"
tokio        = { version = "1.38",  features = ["full"] }
tonic        = { version = "0.11",  features = ["transport"] }
prost        = { version = "0.12" }
prost-types  = { version = "0.12" }
anyhow       = { version = "1.0" }
tracing      = { version = "0.1" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde        = { version = "1.0",   features = ["derive"] }
serde_json   = { version = "1.0" }
sha2         = { version = "0.10" }
hex          = { version = "0.4" }
walkdir      = { version = "2.5" }
ignore       = { version = "0.4" }
notify       = { version = "6.1" }

[workspace.package]
version  = "0.1.0"
edition  = "2021"
authors  = ["CodeIO Contributors"]
