[package]
name    = "codeio-common"
version.workspace = true
edition.workspace = true

[dependencies]
prost       = { workspace = true }
prost-types = { workspace = true }
tonic       = { workspace = true }
anyhow      = { workspace = true }

[build-dependencies]
tonic-build = { version = "0.11", features = ["prost"] }
