[package]
name    = "codeio-spotlight"
version.workspace = true
edition.workspace = true

[[bin]]
name = "codeio-spotlight"
path = "src/main.rs"

[dependencies]
codeio-common  = { path = "../codeio-common" }
tokio          = { workspace = true }
tonic          = { workspace = true }
anyhow         = { workspace = true }
tracing        = { workspace = true }
tracing-subscriber = { workspace = true }
serde          = { workspace = true }
serde_json     = { workspace = true }
